# rustrlm

./: .env.example  .gitignore  AGENTS.md  CONTINUITY.md  Cargo.toml  LICENSE  README.ja.md  README.md  TODO.md  requirements-vendor.txt
.github/workflows/: ci.yml
crates/python_string_repl/: Cargo.toml
crates/python_string_repl_cli/: Cargo.toml
crates/rlm_runner/: Cargo.toml
crates/rlm_runner/src/: final_parser.rs  lib.rs  llm_client.rs  main.rs  prompts.rs  retrieve.rs  rlm_loop.rs  server.rs
crates/rlm_runner/tests/: final_parser_tests.rs  retrieve_api_tests.rs  retrieve_fallback_tests.rs
data/graham_essays/: dataset.jsonl  manifest.yaml  simple_rag_results.json
docs/: README.md
docs/plans/: 2026-01-25-rlm-repl-subset-design.md  2026-01-26-inprocess-retrieval-design.md  2026-01-28-rustrlm-llm-retrieve-design.md
docs/repl/: README.md
docs/research/: README.md  official-implementation-notes.md  repl-extraction-notes.md  sources.md  unofficial-implementation-notes.md  unofficial-test-status.md
docs/rlm/: README.md  (+5 more)
src/: error.rs  lib.rs  main.rs
tests/: system_repl.rs  zlib_bomb_1100000_a.b64
tools/: analyze_repl_blocks_ast.py  analyze_repl_transcript.py  check_openai_models.py  diff_repl_analyses.py  extract_arxiv_html_listings.py  extract_repl_code_blocks.py  extract_rlm_paper_eval_artifacts.py  filter_transcript_by_tasks.py  generate_s_niah.py  load_dotenv_local.py  repl_probe_runner.py  replay_transcript_with_rust_cli.py  run_unofficial_repl_on_corpus.py  run_unofficial_rlm_budgeted_eval.py  run_unofficial_rlm_logged_eval.py
(+41 files in other folders)
