[package]
name = "rlm_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
python_string_repl = { path = "../python_string_repl" }

clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"
axum = { version = "0.7", features = ["json"] }
uuid = { version = "1", features = ["v4"] }

dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "time"] }

[dev-dependencies]
pretty_assertions = "1.4"
